# melody2

melody/: Cargo.toml  flake.nix
melody/src/: audio_ringbuffer.rs  speech.rs
src/: audio.rs  main.rs  melody.rs  speech_analyzer.rs
